...
              screen: 'Home',
            });
          },
        })}
        options={{
          tabBarLabel: 'Home',
          tabBarTestID: 'tab-home',
          tabBarIcon: ({focused, color}) => (
            <View style={styles.tabButton}>
              <Image
                source={images.home}
                style={[styles.icon, {tintColor: color}]}
              />
...
      />
      <Tab.Screen
        name="MyProfile"
        component={MyProfile}
        options={{
          tabBarLabel: 'Profile',
          tabBarTestID: 'tab-profile',
          tabBarIcon: ({color}) => (
            <View style={styles.tabButton}>
              <User color={color} size={22} />
            </View>
          ),
          ...NavigationOptions,
...
