...
            <View style={[styles.notificationcontainer]}>
              <Image source={images.bellIcon} style={styles.bellIcon} />
            </View>
          )}
        </TouchableOpacity>
        <TouchableOpacity
          testID="header-settings"
          onPress={() => navigation.navigate('Settings')}
          style={styles.iconButton}>
          <View style={styles.notificationcontainer}>
            <Image
              source={images.settingsIcon}
              style={styles.notificationicon}
...
